syntax = "proto3";

option go_package = "github.com/atlarge-research/opendc-emulate-kubernetes/protobuf/join_cluster";

import "google/protobuf/empty.proto";

package apate.join_cluster;

service JoinCluster {

    // Joins the node to the Apate cluster.
    // Will return information needed to identify yourself
    // And to join the k8s cluster.
    rpc joinCluster (google.protobuf.Empty) returns (JoinInformation) {}
}

message JoinInformation {
    // The join token needed to join the actual k8s cluster
    string k8sJoinToken = 1;

    // The UUID that will be used from the control plane to identify this node
    string nodeUUID = 2;
}
